fix plugin url